# air-l-dashboard

./: CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  update.yml
data/internal/: classification-review.json  deadline-refresh.json  scrape-log.json  seen-ids.json
data/public/: facets.json  posts-latest.json  posts.ndjson  search-index.json  stats.json  thread-index.json
scripts/: build_feeds.py  build_public_data.py  classify.py  refresh_deadlines.py  scrape.py  utils.py
site/: about.html  app.js  index.html  styles.css
site/data/: facets.json  posts-latest.json  search-index.json  stats.json  thread-index.json
site/feeds/: all.xml  call-for-papers.xml  events.xml  jobs.xml  publications.xml
site/legal/: impressum.html  opt-out.html  privacy.html
tests/: test_classify.py  test_parse.py  test_privacy.py
